Add stream mode example
Co-authored-by: Florentin Dörre <florentin.dorre@neotechnology.com>